--- a/package.json
+++ b/package.json
@@ -12,15 +12,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
+    "express": "^4.18.2",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
-  "devDependencies": {},
-  "config": {
-    "nuxt": {
-      "host": "0.0.0.0"
-    }
-  }
+  "devDependencies": {}
 }
